--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,13 @@
 {
-    "presets": ["next/babel"],
-    "plugins": ["styled-components"]
-  }
-  
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ]
+  ]
+}
