--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^3.0.1",
     "gsap": "^3.10.4",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-double-marquee": "^1.1.0",
+    "rive-react": "^3.0.1",
     "styled-components": "^5.3.5",
     "tabler-icons-react": "^1.47.0"
   },
