--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-double-marquee": "^1.1.0",
+    "react-scroll": "^1.8.7",
     "rive-react": "^3.0.1",
     "styled-components": "^5.3.5",
     "tabler-icons-react": "^1.47.0"
@@ -24,6 +25,7 @@
     "@types/node": "17.0.29",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.0",
+    "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.25",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
