--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@rive-app/react-canvas": "^3.0.1",
+    "flowbite": "^1.5.2",
+    "flowbite-react": "^0.1.6",
     "gsap": "^3.10.4",
     "next": "12.1.5",
     "react": "18.1.0",
@@ -27,8 +29,11 @@
     "@types/react-dom": "18.0.0",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.25",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.6.3"
   }
 }
