--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "flowbite-typography": "^1.0.2",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.6.3"
