--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "wbyt-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@rive-app/react-canvas": "^3.0.1",
-    "flowbite": "^1.5.2",
-    "flowbite-react": "^0.1.6",
-    "gsap": "^3.10.4",
-    "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-double-marquee": "^1.1.0",
-    "react-scroll": "^1.8.7",
-    "rive-react": "^3.0.1",
-    "styled-components": "^5.3.5",
-    "tabler-icons-react": "^1.47.0"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^6.2.1",
-    "@types/node": "17.0.29",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.0",
-    "@types/react-scroll": "^1.8.3",
-    "@types/styled-components": "^5.1.25",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "flowbite-typography": "^1.0.2",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.6.3"
-  }
+    "name": "wbyt-web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@rive-app/react-canvas": "^3.0.1",
+        "@supabase/supabase-js": "^2.0.2",
+        "flowbite": "^1.5.2",
+        "flowbite-react": "^0.1.6",
+        "gsap": "^3.10.4",
+        "next": "12.1.5",
+        "react": "18.1.0",
+        "react-dom": "18.1.0",
+        "react-double-marquee": "^1.1.0",
+        "react-scroll": "^1.8.7",
+        "rive-react": "^3.0.1",
+        "styled-components": "^5.3.5",
+        "tabler-icons-react": "^1.47.0"
+    },
+    "devDependencies": {
+        "@svgr/webpack": "^6.2.1",
+        "@types/express": "^4.17.14",
+        "@types/node": "17.0.29",
+        "@types/react": "18.0.8",
+        "@types/react-dom": "18.0.0",
+        "@types/react-scroll": "^1.8.3",
+        "@types/styled-components": "^5.1.25",
+        "autoprefixer": "^10.4.8",
+        "eslint": "8.14.0",
+        "eslint-config-next": "12.1.5",
+        "flowbite-typography": "^1.0.2",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8",
+        "typescript": "4.6.3"
+    }
 }
