--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "remove-trailing-slash": "^0.1.1",
         "rive-react": "^3.0.1",
         "styled-components": "^5.3.5",
-        "tabler-icons-react": "^1.47.0"
+        "tabler-icons-react": "^1.47.0",
+        "typewriter-effect": "^2.19.0"
     },
     "devDependencies": {
         "@svgr/webpack": "^6.2.1",
