--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "flowbite-react": "^0.1.6",
         "gsap": "^3.10.4",
         "next": "12.1.5",
+        "next-compose-plugins": "^2.2.1",
+        "next-images": "^1.8.4",
+        "next-optimized-images": "^2.6.2",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-double-marquee": "^1.1.0",
@@ -27,7 +30,7 @@
         "typewriter-effect": "^2.19.0"
     },
     "devDependencies": {
-        "@svgr/webpack": "^6.2.1",
+        "@svgr/webpack": "^6.5.0",
         "@types/express": "^4.17.14",
         "@types/node": "17.0.29",
         "@types/react": "18.0.8",
