--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,27 +2,15 @@
 #
 # To get started with Next.js see: https://nextjs.org/docs/getting-started
 #
-name: Deploy Next.js site to Pages
+name: build action
 
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
-
+  pull_request:
+    branches: ["dev"]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
+    
 jobs:
   # Build job
   build:
@@ -80,15 +68,3 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./out
-
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
