--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "next-compose-plugins": "^2.2.1",
         "next-images": "^1.8.4",
         "next-optimized-images": "^2.6.2",
+        "nodemailer": "^6.8.0",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-double-marquee": "^1.1.0",
