--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@rive-app/react-canvas": "^3.0.1",
         "@supabase/supabase-js": "^2.0.2",
+        "@types/nodemailer": "^6.4.7",
         "flowbite": "^1.5.2",
         "flowbite-react": "^0.1.6",
         "gsap": "^3.10.4",
