--- a/.github/workflows/vercel_deployment.yml
+++ b/.github/workflows/vercel_deployment.yml
@@ -5,7 +5,7 @@ env:
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["prod"]
+    branches: []
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
